<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">
    <!--photo-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile"
        android:layout_width="@dimen/_85mdp"
        android:layout_height="@dimen/_85mdp"
        android:layout_marginTop="@dimen/_60mdp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundImageViewProfile" />
    <!--name family-->
    <TextView
        android:id="@+id/name_family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6mdp"
        android:text="@string/mehdi_sekoba"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/Raisin_Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile" />
    <!--developer-->
    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_developer"
        android:textAppearance="@style/TextAppearance_medium"
        android:textColor="@color/gray_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_family" />
    <!--divider-->
    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30mdp"
        android:layout_marginTop="@dimen/_6mdp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/developer" />
</androidx.constraintlayout.widget.ConstraintLayout>