<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_255mdp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10mdp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="0dp"
    app:strokeWidth="0dp"
    app:strokeColor="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_180mdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/denied"
            android:contentDescription="@string/app_name" />


        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16mdp"
            android:layout_marginTop="@dimen/_8mdp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="1.5dp"
            android:text="@string/grant_permissions_for_the_app_to_function_properly"
            android:textAppearance="@style/TextAppearance_medium"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_icon" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8mdp"
            android:layout_marginBottom="@dimen/_16mdp"
            android:text="@string/open_setting"
            android:textAppearance="@style/TextAppearance_Bold"
            android:textColor="@color/white"
            app:backgroundTint="@color/Electric_Red"
            app:cornerRadius="@dimen/_60mdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_message" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>